Remove arguments table when there are no fields to be shown in documentation.

--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -9,10 +9,10 @@
         </div>
       </div>
 
-      <div class="table__title">Arguments</div>
+      <div *ngIf="field.args.length > 0" class="table__title">Arguments</div>
       <table>
         <thead>
-        <tr>
+        <tr *ngIf="field.args.length > 0">
           <th>Argument</th>
           <th>Type</th>
         </tr>
