--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -24,7 +24,7 @@
         </tr>
         <tr class="returns">
           <td>Returns:</td>
-          <td><span class="field-type">{{field.type.name || field.type.ofType.name || field.type.ofType.ofType.name}}</span></td>
+          <td><span class="field-type" (click)="navigateToType()">{{field.type.name || field.type.ofType.name || field.type.ofType.ofType.name}}</span></td>
           <td><{{field.type.kind || field.type.ofType.kind || field.type.ofType.ofType.kind }}></td>
         </tr>
         </tbody>
