Add the whole language dropdown on profile page to feature flag.

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -56,7 +56,7 @@
                 <input matInput placeholder="{{'PROFILE_DETAILS_EMAIL' | translate}}" [(ngModel)]="user.email">
               </mat-input-container>
 
-              <div class="profile-page__content__general__data__dropdown">
+              <div class="profile-page__content__general__data__dropdown" *ngIf="translationsService.featureFlagService.isEnabled('user-settings-languages')">
 
                 <dropdown-component
                   [selected]="userSettingsBackup.language || 'English'"
