--- a/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.scss
+++ b/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.scss
@@ -188,11 +188,20 @@
         left: 45px;
         white-space: nowrap;
         font-size: 16px;
+        line-height: 20px;
         color: #5F6368;
+
+        div {
+          &:last-of-type {
+            font-size: 13px;
+          }
+        }
       }
     }
 
     .line {
+      margin-top: -1px;
+      margin-bottom: -1px;
       margin-left: 8px;
       height: 85px;
       width: 8px;
