--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.html
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.html
@@ -20,7 +20,7 @@
         (click)="navigateTo(child, searchItem.name); selectedItem = child;"
         class="side-search__item__child"
         [class.selected]="child === selectedItem">
-        <span>{{child}}</span>
+        <span matTooltip="{{child}}">{{child}}</span>
       </div>
     </div>
   </ng-container>
