--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
@@ -9,6 +9,7 @@
     border-right: 2px solid rgba(0, 0, 0, 0.2);
     overflow: auto;
     min-width: 250px;
+    background: #F0F3F4;
   }
 
   &__content {
