Add header component to graphql-docs.

--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
@@ -1,3 +1,6 @@
+<graphql-header
+  [path]="['Api Documentation']">
+</graphql-header>
 <div class="docs">
   <mat-spinner *ngIf="!loaded; else load"></mat-spinner>
 
