--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
@@ -1,6 +1,6 @@
 .docs {
   background: #E5E5E5;
-  height: calc(100vh - 70px);
+  height: calc(100vh - 70px - 110px);
   font-size: 16px;
   overflow: hidden;
   display: flex;
@@ -14,7 +14,7 @@
 
   &__content {
     overflow: auto;
-    padding: 40px 20px;
+    padding: 20px 20px;
     width: 100%;
     background: #E5E5E5;
   }
