--- a/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.scss
+++ b/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.scss
@@ -1,3 +1,12 @@
+.chargeback {
+  padding: 10px 15px;
+  background: #DC2547;
+  color: #ffffff;
+  font-size: 13px;
+  line-height: 24px;
+  font-weight: 500;
+}
+
 .header {
   padding: 20px;
   background: #ffffff;
@@ -8,6 +17,14 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+
+    .refund {
+      background: #DC2547;
+      font-size: 16px;
+      color: #ffffff;
+      padding: 2px 6px;
+      border-radius: 4px;
+    }
 
     div {
       font-size: 20px;
@@ -74,10 +91,29 @@
 
       .value {
         display: flex;
+        align-items: center;
         margin: auto auto auto 0;
         padding: 0;
         color: #202124;
         font-size: 15px;
+
+        mat-icon {
+          margin-left: 10px;
+          font-size: 18px;
+          width: 18px;
+          height: 18px;
+          border-radius: 50%;
+        }
+
+        .icon-success {
+          background: #1EBEA5;
+          color: #ffffff;
+        }
+
+        .icon-error {
+          background: #ffffff;
+          color: #DC2547;
+        }
 
         div {
           border: none;
@@ -119,13 +155,40 @@
       font-size: 16px;
     }
 
-    .image {
-      display: flex;
-      width: 300px;
-      height: 170px;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+    .image-wrapper {
+      position: relative;
+
+      .image {
+        display: flex;
+        width: 300px;
+        height: 170px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+
+      .returns-wrapper {
+        position: absolute;
+        top: 15px;
+        left: 24px;
+
+        .return {
+          display: flex;
+          margin-bottom: 10px;
+          align-items: center;
+          padding: 3px 10px 3px 6px;
+          font-size: 14px;
+          font-weight: 500;
+          color: #ffffff;
+          background: #DC2547;
+          border-radius: 4px;
+
+          mat-icon {
+            color: rgba(255,255,255,0.5);
+            margin-right: 5px;
+          }
+        }
+      }
     }
 
     .info {
