--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
@@ -38,6 +38,8 @@
     margin-left: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding-left: 10px;
+    padding-right: 5px;
 
     &:hover {
       span {
