--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
@@ -8,7 +8,7 @@
   &__sidenav {
     border-right: 2px solid rgba(0, 0, 0, 0.2);
     overflow: auto;
-    min-width: 250px;
+    width: 350px;
     background: #F0F3F4;
   }
 
