--- a/src/app/pages/products-page/product-view/product-images/product-images.component.html
+++ b/src/app/pages/products-page/product-view/product-images/product-images.component.html
@@ -59,6 +59,10 @@
         <ng-template #preview>
           <img [src]="filePreviewPath" class="image" [class.image--file-over]="onDropzone" style="width: 100%;"/>
         </ng-template>
+
+        <div class="upload-spinner" *ngIf="uploadInProgress">
+          <mat-spinner></mat-spinner>
+        </div>
       </div>
     </div>
 
