--- a/src/app/pages/products-page/product-view/product-images/product-images.component.scss
+++ b/src/app/pages/products-page/product-view/product-images/product-images.component.scss
@@ -112,6 +112,7 @@
 }
 
 .dropzone {
+  position: relative;
   min-height: 170px;
   border: 2px dotted rgba(0,0,0,0.08);
   background: #F5F5F5;
@@ -175,4 +176,20 @@
   padding: 25px 55px;
   font-size: 14px;
   color: #4a4a4a;
+}
+
+.upload-spinner {
+  position: absolute;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.2);
+
+  mat-spinner {
+    height: 50px;
+    width: 50px;
+    margin: auto;
+  }
 }
