Style changes for graphql.

--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
@@ -1,5 +1,5 @@
 .docs {
-  background: #E5E5E5;
+  background: #F0F3F4;
   height: calc(100vh - 70px - 110px);
   font-size: 16px;
   overflow: hidden;
@@ -16,7 +16,7 @@
     overflow: auto;
     padding: 20px 20px;
     width: 100%;
-    background: #E5E5E5;
+    background: #F0F3F4;
   }
 
   mat-spinner {
