--- a/src/app/graph-qldocs-2/components/type-card/type-card.component.scss
+++ b/src/app/graph-qldocs-2/components/type-card/type-card.component.scss
@@ -1,6 +1,9 @@
 .field {
   background: #fafafa;
   margin-bottom: 17px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  box-shadow: 0 1px rgba(0, 0, 0, 0.25);
 
   &__name {
     font-weight: 500;
