--- a/src/app/pages/customer-advanced-page/customer-advanced-rebills/customer-advanced-rebills.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-rebills/customer-advanced-rebills.component.html
@@ -2,29 +2,42 @@
   <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedIndex">
 
     <mat-tab>
-      <div>
-        <div class="heading">
 
-          <div class="mrw-bi-input">
-            <mat-input-container [floatLabel]="'never'">
-              <input matInput type="text" placeholder="Filter Orders">
-            </mat-input-container>
+      <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedGranularityIndex">
+
+        <mat-tab>
+          <div>
+            <div class="heading">
+              <div class="mrw-bi-input">
+                <mat-input-container [floatLabel]="'never'">
+                  <input matInput type="text" placeholder="Filter Orders">
+                </mat-input-container>
+              </div>
+
+              <div class="number-of">{{(rebills || []).length}} Orders</div>
+
+              <div class="switcher">
+                <mat-icon class="icon" [class.icon--active]="selectedIndex === 0" (click)="setIndex(0)">view_agenda</mat-icon>
+                <mat-icon class="icon" [class.icon--active]="selectedIndex === 1" (click)="setIndex(1)">view_headline</mat-icon>
+              </div>
+            </div>
+
+            <div class="card-body">
+              <ng-container *ngFor="let rebill of rebills">
+                <rebill-item [rebill]="rebill" (rebillSelected)="viewSingleRebill($event)"></rebill-item>
+              </ng-container>
+            </div>
           </div>
+        </mat-tab>
 
-          <div class="number-of">{{(rebills || []).length}} Orders</div>
-
-          <div class="switcher">
-            <mat-icon class="icon" [class.icon--active]="selectedIndex === 0" (click)="setIndex(0)">view_agenda</mat-icon>
-            <mat-icon class="icon" [class.icon--active]="selectedIndex === 1" (click)="setIndex(1)">view_headline</mat-icon>
+        <mat-tab>
+          <div *ngIf="selectedRebill">
+            <rebill-expanded-details [rebill]="selectedRebill" (backButtonSelected)="viewAllRebills()"></rebill-expanded-details>
           </div>
-        </div>
+        </mat-tab>
 
-        <div class="card-body">
-          <ng-container *ngFor="let rebill of rebills">
-            <rebill-item [rebill]="rebill"></rebill-item>
-          </ng-container>
-        </div>
-      </div>
+      </mat-tab-group>
+
     </mat-tab>
 
     <mat-tab>
