--- a/src/app/pages/customer-advanced-page/rebill-expanded-details/rebill-expanded-details.component.scss
+++ b/src/app/pages/customer-advanced-page/rebill-expanded-details/rebill-expanded-details.component.scss
@@ -1,4 +1,5 @@
 .container {
+  margin: 20px;
   background: white;
   border-radius: 4px;
   border: 2px solid rgba(0,0,0,0.12);
@@ -40,15 +41,10 @@
       width: 1px;
       height: 30px;
       background: rgba(0,0,0,0.12);
-
-      &--buttons {
-        margin-left: 12px;
-        margin-right: 4px;
-      }
     }
 
     mat-icon {
-      margin-left: 8px;
+      margin-right: 8px;
       margin-bottom: 2px;
       width: 18px;
       height: 18px;
@@ -64,16 +60,66 @@
       border: 1px solid rgba(0, 0, 0, 0.12);
 
       &:first-of-type {
-        margin-left: auto;
+        margin-right: 20px;
       }
     }
   }
 
 }
 
-info-table {
-  display: block;
-  padding: 0 20px;
+.details {
+  display: flex;
+  margin: 20px;
+
+  .transactions {
+    padding: 20px 20px 10px;
+    border: 1px solid rgba(0,0,0,0.06);
+
+    .title {
+      margin-bottom: 15px;
+      color: #5F6368;
+      font-size: 14px;
+    }
+
+    th,td {
+      padding: 8px 5px;
+    }
+
+    td {
+      color: #202124;
+      font-size: 13px;
+
+      button {
+        font-weight: 400;
+      }
+    }
+
+    th {
+      color: #5F6368;
+      font-size: 12px;
+      font-weight: 500;
+
+      &:last-of-type {
+        width: 1px;
+      }
+    }
+  }
+
+  info-table {
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  .tables {
+    width: calc(100% - 270px);
+  }
+
+  .fulfillment {
+    margin-left: 20px;
+    border-radius: 4px;
+    width: 250px;
+    background: rgba(30, 190, 165, 0.1);
+  }
 }
 
 .products {
