--- a/src/app/pages/account-management-page/account-management-users/account-management-users.component.scss
+++ b/src/app/pages/account-management-page/account-management-users/account-management-users.component.scss
@@ -70,6 +70,15 @@
       min-width: 38px;
       line-height: 38px;
       text-align: center;
+
+      &--pending {
+        display: flex;
+        background: #DCDCDC;
+      }
+
+      img {
+        margin: auto;
+      }
     }
 
     .data {
