--- a/src/app/graph-qldocs-2/components/side-container/side-container.component.html
+++ b/src/app/graph-qldocs-2/components/side-container/side-container.component.html
@@ -6,6 +6,6 @@
   <div class="line"></div>
   <div class="details">
     <div class="title">RESPONSE</div>
-    <pre>{{response}}</pre>
+    <pre class="content" (click)="navigateToResponseType()">{{response}}</pre>
   </div>
 </div>
