--- a/src/app/pages/components/entities-table/entities-table.component.scss
+++ b/src/app/pages/components/entities-table/entities-table.component.scss
@@ -57,3 +57,18 @@ mat-checkbox {
     margin-left: auto;
   }
 }
+
+.image {
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  margin-right: 6px;
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+}
