Add button to query/mutation response.

--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -32,6 +32,12 @@
       <pre class="field__example" *ngIf="!(isQuery || isMutation)">{{field.example | formatGraphQl}}</pre>
     </div>
 
-    <side-container *ngIf="isQuery || isMutation" [example]="field.example" [response]="field.response" [fieldType]="field.type"></side-container>
+    <side-container
+      *ngIf="isQuery || isMutation"
+      [fieldName]="field.type.name || field.type.ofType.name || field.type.ofType.ofType.name"
+      [example]="field.example"
+      [response]="field.response"
+      [fieldType]="field.type">
+    </side-container>
   </div>
 </div>
