--- a/src/app/graph-qldocs-2/components/side-container/side-container.component.html
+++ b/src/app/graph-qldocs-2/components/side-container/side-container.component.html
@@ -5,7 +5,10 @@
   </div>
   <div class="line"></div>
   <div class="details">
-    <div class="title">RESPONSE</div>
-    <pre class="content" (click)="navigateToResponseType()">{{response}}</pre>
+    <div class="response-header">
+      <div class="title">RESPONSE</div>
+      <button (click)="navigateToResponseType()">{{fieldName}}</button>
+    </div>
+    <pre>{{response}}</pre>
   </div>
 </div>
