--- a/src/app/graph-qldocs-2/components/side-container/side-container.component.scss
+++ b/src/app/graph-qldocs-2/components/side-container/side-container.component.scss
@@ -28,12 +28,23 @@
     font-size: 14px;
     margin-bottom: 25px;
   }
+
+  .response-header {
+    display: flex;
+
+    button {
+      background: #000000;
+      color: #8EC9FD;
+      margin-left: 15px;
+      height: 24px;
+      border-radius: 2px;
+      margin-top: 4px;
+      border: 1px rgba(0, 0, 0, 0.12);
+      cursor: pointer;
+    }
+  }
 }
 
 pre {
   color: #B8E7FD;
-}
-
-.content {
-  cursor: pointer;
 }
