Add allow on order field to campaigns

--- a/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
@@ -36,7 +36,7 @@
 
     <div class="flex-custom flex-custom--center prepaid-checkbox">
       <span> {{'CAMPAIGN_INFO_ALLOWORDER' | translate}} </span>
-      <mat-checkbox class="flex-align--right" [disabled]="mode === modes.View" [(ngModel)]="entity.allowOrderCreation"></mat-checkbox>
+      <mat-checkbox class="flex-align--right" [disabled]="mode === modes.View" [(ngModel)]="entity.allowOnOrder"></mat-checkbox>
     </div>
   </div>
 
